Add all buttons and result, score div

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>rock-paper-scissors</title>
-    <script src="javascript.js"></script>
+    <script src="javascript.js" defer></script>
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+    <div class="buttons">
+        <button class="btn" value="rock">ROCK</button>
+        <button class="btn" value="paper">PAPER</button>
+        <button class="btn" value="scissors">SCISSORS</button>
+    </div>
+    <div id="result"></div>
+    <div id="score">
+        <p id="playerwins"></p>
+        <p id="comwins"></p>
+    </div>
 </body>
 </html>
